--- a/head_pose_estimation.ipynb
+++ b/head_pose_estimation.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,17 +51,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "frames_count 139\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(str(video_input_file))\n",
     "# cap = cv2.VideoCapture(0)\n",
@@ -72,29 +64,13 @@
     "frames_count = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
     "prop_format = int(cap.get(cv2.CAP_PROP_FORMAT))\n",
     "\n",
-    "# print(f'width {width}, height {height}, fps {fps}, fourcc {prop_fourcc}, format {prop_format}')\n",
-    "print(f'frames_count {frames_count}')\n",
-    "\n",
-    "# Play input video\n",
-    "\n",
-    "# while(cap.isOpened()):\n",
-    "#     ret, frame = cap.read()\n",
-    "\n",
-    "#     gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
-    "    \n",
-    "# #     pose_analyzed = analyze_pose(frame)\n",
-    "    \n",
-    "#     cv2.imshow('frame',gray)\n",
-    "#     if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "#         break\n",
-    "\n",
     "cap.release()\n",
     "# cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,49 +139,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "10\n",
-      "20\n",
-      "30\n",
-      "40\n",
-      "50\n",
-      "60\n",
-      "70\n",
-      "80\n",
-      "90\n",
-      "100\n",
-      "110\n",
-      "120\n",
-      "130\n"
+      "0% complete\n",
+      "0% complete\n",
+      "10% complete\n",
+      "10% complete\n",
+      "20% complete\n",
+      "20% complete\n",
+      "30% complete\n",
+      "30% complete\n",
+      "40% complete\n",
+      "50% complete\n",
+      "60% complete\n",
+      "70% complete\n",
+      "80% complete\n",
+      "90% complete\n"
      ]
     }
    ],
    "source": [
     "# Estimate pose and save file\n",
     "\n",
-    "cap = cv2.VideoCapture(video_input_file)\n",
-    "# Uncomment line (1) and lines (3) if video from a web camera is to be used\n",
-    "# cap = cv2.VideoCapture(0)       # line (1)\n",
+    "cap = cv2.VideoCapture(str(video_input_file))\n",
+    "# cap = cv2.VideoCapture(0)      # for web camera\n",
     "\n",
     "# Define the codec and create VideoWriter object\n",
-    "out = cv2.VideoWriter(video_output_file, prop_fourcc, fps, (width, height))\n",
+    "out = cv2.VideoWriter(str(video_output_file), prop_fourcc, fps, (width, height))\n",
     "\n",
     "i = 0\n",
     "while(cap.isOpened()):\n",
     "    ret, frame = cap.read()\n",
-    "    if ret:  \n",
-    "        if (i / fps) * 100 % 10 == 0:\n",
-    "            print(f'{i}% complete')\n",
+    "    if ret: \n",
+    "        percent = 100 * i //(frames_count)\n",
+    "        if percent % 10 == 0:\n",
+    "            print(f'{percent}% complete')\n",
     "        frame = analyze_pose(frame)\n",
     "        \n",
-    "#         cv2.imshow('frame',frame)                #lines (3)\n",
+    "#         cv2.imshow('frame',frame)               \n",
     "#         if cv2.waitKey(1) & 0xFF == ord('q'):\n",
     "#             break\n",
     "            \n",
